syntax = "proto3";

option csharp_namespace = "Parstech.Shop.Shared.Protos.Common";

package common;

// COMMON MESSAGE DEFINITIONS

// Standard response
message ResponseDto {
  bool success = 1;
  string message = 2;
  int32 code = 3;
}

// Empty request/response
message EmptyRequest {}

message EmptyResponse {}

// Paging
message PagingRequest {
  int32 page_number = 1;
  int32 page_size = 2;
  string sort_by = 3;
  bool sort_ascending = 4;
}

message PagingResponse {
  int32 current_page = 1;
  int32 page_size = 2;
  int32 total_pages = 3;
  int32 total_count = 4;
  bool has_previous = 5;
  bool has_next = 6;
}

// File handling
message FileDto {
  bytes content = 1;
  string file_name = 2;
  string content_type = 3;
  int64 size = 4;
}

// Common data structures
message AddressDto {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string company = 4;
  string address_line1 = 5;
  string address_line2 = 6;
  string city = 7;
  string state = 8;
  string postal_code = 9;
  string country = 10;
  string country_code = 11;
  string phone = 12;
  string email = 13;
  bool is_default_billing = 14;
  bool is_default_shipping = 15;
}

message MoneyDto {
  double amount = 1;
  string currency = 2;
}

message ContactInfoDto {
  string name = 1;
  string email = 2;
  string phone = 3;
  string company = 4;
}

message GeoLocationDto {
  double latitude = 1;
  double longitude = 2;
}

message DateRangeDto {
  string from_date = 1;
  string to_date = 2;
}

message LocaleDto {
  string language_code = 1;
  string country_code = 2;
  string currency_code = 3;
}

// Image handling
message ImageDto {
  int64 id = 1;
  string url = 2;
  string alt_text = 3;
  int32 width = 4;
  int32 height = 5;
  int32 sort_order = 6;
  string title = 7;
}

// SEO
message SeoDto {
  string meta_title = 1;
  string meta_description = 2;
  string meta_keywords = 3;
  string canonical_url = 4;
  bool no_index = 5;
  bool no_follow = 6;
}

// Errors
message ErrorDto {
  string code = 1;
  string message = 2;
  string detail = 3;
  string field = 4;
}

message ErrorResponse {
  repeated ErrorDto errors = 1;
  string request_id = 2;
  string timestamp = 3;
}

// Search
message SearchFilterDto {
  string field = 1;
  string operator = 2;
  string value = 3;
}

message SearchSortDto {
  string field = 1;
  bool ascending = 2;
}

message SearchRequest {
  string query = 1;
  repeated SearchFilterDto filters = 2;
  repeated SearchSortDto sort = 3;
  int32 page = 4;
  int32 page_size = 5;
}

// Configuration
message KeyValuePairDto {
  string key = 1;
  string value = 2;
}

// Audit
message AuditInfoDto {
  string created_by = 1;
  string created_date = 2;
  string last_modified_by = 3;
  string last_modified_date = 4;
} 